infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  # 1 pod to run
  replicas: 1
  # take a look at all Pods were created
  selector:
    # find Pods with the label app:payments
    matchLabels:
      app: payments
  # here we specifying the configuration of a Pod we want
  # this deployment to create
  template:
    metadata:
      # we want Pod to have the label app:payments  
      labels:
        app: payments
    # describing configuration options of the Pod we 
    # are about to create
    spec:
      # array of containers running inside this Pod
      containers:
        - name: payments
          image: yarepka/payments:latest
          # set secret variables to env
---
apiVersion: v1
kind: Service
metadata:
  # service name
  name: payments-srv
spec:
  # service type ClusterIP (if not specified ClusterIP is default)
  type: ClusterIP
  selector:
    # try to find all pods with label app:payments
    app: payments
  ports:
    - name: payments #for loggin purposes
      protocol: TCP
      # node service port
      port: 3000
      # pod port
      targetPort: 3000
