infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  # 1 pod to run
  replicas: 1
  # take a look at all Pods were created
  selector:
    # find Pods with the label app:tickets
    matchLabels:
      app: tickets
  # here we specifying the configuration of a Pod we want
  # this deployment to create
  template:
    metadata:
      # we want Pod to have the label app:tickets  
      labels:
        app: tickets
    # describing configuration options of the Pod we 
    # are about to create
    spec:
      # array of containers running inside this Pod
      containers:
        - name: tickets
          image: yarepka/tickets:latest
          # set secret variables to env
---
apiVersion: v1
kind: Service
metadata:
  # service name
  name: tickets-srv
spec:
  # service type ClusterIP (if not specified ClusterIP is default)
  type: ClusterIP
  selector:
    # try to find all pods with label app:tickets
    app: tickets
  ports:
    - name: tickets #for loggin purposes
      protocol: TCP
      # node service port
      port: 3000
      # pod port
      targetPort: 3000
