infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  # 1 pod to run
  replicas: 1
  # take a look at all Pods were created
  selector:
    # find Pods with the label app: tickets-mongo
    matchLabels:
      app: tickets-mongo
  # here we specifying the configuration of a Pod we want
  # this deployment to create
  template:
    metadata:
      # we want Pod to have the label app:tickets-mongo
      labels:
        app: tickets-mongo
    # describing configuration options of the Pod we 
    # are about to create
    spec:
      # array of containers running inside this Pod
      containers:
        - name: tickets-mongo
          image: mongo

# creating clusterIP service          
---
apiVersion: v1
kind: Service
metadata:
  # service name (domain name)
  name: tickets-mongo-srv
spec:
  # service type ClusterIP (if not specified ClusterIP is default)
  type: ClusterIP
  selector:
    # try to find all pods with label app:tickets-mongo
    app: tickets-mongo
  ports:
    - name: db #for loggin purposes
      protocol: TCP
      # node service port
      port: 27017
      # pod port
      targetPort: 27017
